external-crates/move/crates/move-compiler/tests/move_check/unit_test/test_filter_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/unit_test/test_filter_function.move:6:24
  │
6 │     public fun foo() { bar() }
  │                        ^^^ Unbound function 'bar' in current scope
